# leash-bio-ai

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
leash_bio_ai/data/: gold_state.py  polars.py  silver_state.py
leash_bio_ai/features/: utils.py
leash_bio_ai/utils/: sample_conf.py
notebooks/: 01_examine_data.ipynb  02_polars_pipeline_test.ipynb  03_silver_eda.ipynb  04_gold_eda.ipynb  0_pytorch_gpu.ipynb
