[tool.poetry]
name = "atmospheric-physics-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = {version="2.2.2+cu118", source="torch"}
torchaudio = {version="2.2.2+cu118", source="torch"}
torchvision = {version="0.17.2+cu118", source="torch"}
matplotlib = "^3.8.4"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "^1.26.4"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.24.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
